--- a/OneDrive/Desktop/Web Development/JavaScript/style.css
+++ b/OneDrive/Desktop/Web Development/JavaScript/style.css
@@ -123,7 +123,6 @@
     width: 350px;
     height: 410px; 
     background-color: skyblue;
-    
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -310,3 +309,221 @@ margin-left: 20px;
     margin-bottom: 20px;
 }
 
+/* Ubereats section */
+
+.ubereatstabmaindiv {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    width: 1100px;
+    height: 550px;
+    background-color: burlywood;
+    margin-top: 100px;
+}
+
+.ubereatsleftmaindiv {
+    height: 550px;
+    width: 70px;
+    background-color: gainsboro;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+}
+
+.ubereatslogosec {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    width: 55px;
+    height: 55px;
+   margin-bottom: 30px;
+   margin-top: 15px;
+}
+
+i.fa-adjustments {
+  font-size: x-large;  
+}
+
+.ubereatslogosec:hover {
+    cursor: pointer;
+    background-color: gray;
+    border-radius: 50%;
+    opacity: 0.5;
+}
+
+.ubereatsrightmaindiv {
+    background-color: whitesmoke;
+    height: 550px;
+    width: 1030px;
+    display: grid;
+    grid-template-areas: 
+    'ordersec ordersecs ordersecs openbutton'
+    'Preparingstatus Preparingstatus Readystatus Readystatus'
+    'currentOrdersec currentOrdersecs currentorderpart2 currentorderpart2s';
+    
+    
+    
+}
+
+.ubereatsgriditems {
+    background-color: yellowgreen;
+    border: 3px solid black;
+   width: 150px;
+   margin-left: 15px;
+    height: 30px;
+    margin-bottom: 10px;
+}
+
+#ordersec {
+    grid-area: ordersec;
+    background-color: whitesmoke;
+    border: none;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: flex-start;
+    padding-top: 13px;
+    padding-left: 20px;
+    font-size: x-large;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+#openbutton {
+    grid-area: openbutton;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-evenly;
+    background-color: gainsboro;
+    border-style: none;
+    border-radius: 20px;
+    width: 150px;
+    height: 50px;
+    margin-top: 13px;
+    margin-left: 380px;
+}
+
+#openbutton:hover {
+    cursor: pointer;
+    background-color: grey;
+    opacity: 0.8;
+}
+
+
+.acceptingicon2 {
+border: 1px black solid;
+}
+
+#Preparingstatus {
+    grid-area: Preparingstatus;
+}
+
+#Readystatus {
+    grid-area: Readystatus;
+}
+
+#currentOrdersec {
+    grid-area: currentOrdersec;
+}
+
+#currentorderpart2 {
+    grid-area: currentorderpart2;
+}
+
+.openanchortag {
+    text-decoration: none;
+    color: black;
+}
+
+.preparingnumber {
+    width: 15px;
+    height: 15px;
+    background-color: whitesmoke;
+    border: 2px solid grey;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    border-radius: 5px;
+}
+
+#Preparingstatus {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-evenly;
+    background-color: whitesmoke;
+    border: none;
+    font-size: larger;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    margin-top: 0px;
+    margin-bottom: 0px;
+}
+
+#Readystatus {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-evenly;
+    background-color: whitesmoke;
+    border: none;
+    font-size: larger;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    margin-top: 0px;
+    width: 140px;
+    margin-bottom: 10px;
+}
+
+#currentOrdersec {
+    width: 450px;
+    height: 100px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: xx-large;
+    background-color: whitesmoke;
+    border-radius: 10px;
+    border-color: gray;
+    border-width: 3px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    margin-left: 20px;
+    margin-bottom: 160px;
+    
+}
+
+#currentOrdersec:hover {
+    cursor: pointer;
+    background-color: gray;
+    border: 1px double black;
+}
+
+#currentorderpart2 {
+    width: 450px;
+    height: 100px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: xx-large;
+    background-color: whitesmoke;
+    border-radius: 10px;
+    border-color: gray;
+    border-width: 3px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    margin-left: 15px;
+    margin-bottom: 160px;
+    margin-top: 120px
+    
+    
+    
+    
+}
+
+#currentorderpart2:hover {
+    cursor: pointer;
+    background-color: gray;
+    border: 1px double black;
+}
